Sun Aug 26 18:39:43 2001  George Lebl <jirka@5z.com>

	* libgnome/configure.in, libgnome/libgnome-2.0.pc.in:  Require GConf

Fri Aug 24 09:59:14 2001  George Lebl <jirka@5z.com>

	* acconfig.h, configure.in, libgnome/gnome-utils.[ch]:  Add portable
	  setenv, unsetenv, clearenv implementations since they still didn't
	  get into glib.  If they get there these can be easily replaced
	  by macros or just punted.  They are simple yet very useful to
	  have to write portable code

	* libgnome/gnome-utils.c:  make gnome_is_program_in_path use 'access'
	  with X_OK to check only for actually executable files and it also
	  regets the PATH every time so that it follows the current PATH
	  setting.  Note that this cannot possibly be the bottleneck in this
	  function and the "access" is.

	* configure.in: get rid of this elitist evil CERTIFIED_GNOMIE
	  bullshit

2001-08-14  Michael Meeks  <michael@ximian.com>

	* configure.in: add a bonobo-config dependency.

2001-08-14  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added zh_TW to ALL_LINGUAS.

2001-08-14  Martin Baulig  <baulig@suse.de>

	Released libgnome 1.102.0 "Roswell".

	* configure.in: Bumped version number to 1.102.0.

2001-08-09  Martin Baulig  <baulig@suse.de>

	Released libgnome 1.101.0 "Pearl Harbor".

	* configure.in: Bumped version number to 1.101.0.

2001-08-09  Martin Baulig  <baulig@suse.de>

	* tools/*: Removed.

	* configure.in, Makefile.am: Reverted Darin's last change here,
	all we need to do is to remove the check for this stuff in
	libgnomeui's configure.in, it isn't used anymore.

2001-08-09  Martin Baulig  <baulig@suse.de>

	* configure.in: Don't check for CSL anymore.

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* configure.in:
	* Makefile.am:
	Start building the tools directory again, but don't bother
	building the intl directory any more.

2001-08-06  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added sk to ALL_LINGUAS.
