@@ -11,3 +11,8 @@
 #undef HAVE_SETENV
 #undef HAVE_UNSETENV
 #undef HAVE_CLEARENV
+#undef HAVE_ESD
+#undef HAVE_LIBAUDIOFILE
+#undef HAVE_SETFSGID
+#undef HAVE_SYS_FSUID_H
+#undef HAVE_ALLOCA_H
