@@ -25,7 +25,18 @@ AM_PROG_LIBTOOL
 AC_PROG_YACC
 AC_PATH_PROGS(PATH_TO_XRDB, "xrdb")
 
-AC_CHECK_FUNCS([setenv unsetenv clearenv])
+AC_CHECK_FUNCS([setenv unsetenv clearenv setfsgid])
+AC_CHECK_HEADERS(sys/fsuid.h)
+
+dnl
+dnl Check for esound library
+dnl
+AM_PATH_ESD(0.2.5, AC_DEFINE(HAVE_ESD))
+
+dnl
+dnl Check for audiofile library
+dnl
+AM_PATH_AUDIOFILE(0.1.5,AC_DEFINE(HAVE_LIBAUDIOFILE))
 
 dnl utility conditional
 AM_CONDITIONAL(FALSE, test "x" = "y")
@@ -66,6 +77,16 @@ dnl
 PKG_CHECK_MODULES(LIBGNOME, glib-2.0 >= 1.3.7 gmodule-2.0 >= 1.3.7 gnome-vfs-2.0 >= 1.1 \
 	          libxml-2.0 >= 2.4.1 libbonobo-2.0 >= 1.100.0 bonobo-config-2.0 >= 0.1.3 \
 	          gconf-2.0 >= 1.1.1)
+
+dnl
+dnl Add esd and audiofile stuff
+dnl
+LIBGNOME_CFLAGS="$LIBGNOME_CFLAGS $AUDIOFILE_CFLAGS $ESD_CFLAGS"
+LIBGNOME_LIBS="$LIBGNOME_LIBS $AUDIOFILE_LIBS $ESD_LIBS"
+
+dnl
+dnl Substitute these
+dnl
 AC_SUBST(LIBGNOME_CFLAGS)
 AC_SUBST(LIBGNOME_LIBS)
 
