@@ -1,3 +1,8 @@
+Sat Sep 01 23:05:23 2001  George Lebl <jirka@5z.com>
+
+	* configure.in, acconfig.h: Add some HAVE_ defines, and again
+	  look for esd and audiofile
+
 Sun Aug 26 18:39:43 2001  George Lebl <jirka@5z.com>
 
 	* libgnome/configure.in, libgnome/libgnome-2.0.pc.in:  Require GConf
